; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/disp/extr_headgv100.c_gv100_head_rgpos.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/disp/extr_headgv100.c_gv100_head_rgpos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_head = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_head*, i32*, i32*)* @gv100_head_rgpos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gv100_head_rgpos(%struct.nvkm_head* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.nvkm_head*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.nvkm_device*, align 8
  %8 = alloca i32, align 4
  store %struct.nvkm_head* %0, %struct.nvkm_head** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.nvkm_head*, %struct.nvkm_head** %4, align 8
  %10 = getelementptr inbounds %struct.nvkm_head, %struct.nvkm_head* %9, i32 0, i32 1
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.nvkm_device*, %struct.nvkm_device** %14, align 8
  store %struct.nvkm_device* %15, %struct.nvkm_device** %7, align 8
  %16 = load %struct.nvkm_head*, %struct.nvkm_head** %4, align 8
  %17 = getelementptr inbounds %struct.nvkm_head, %struct.nvkm_head* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = mul nsw i32 %18, 2048
  store i32 %19, i32* %8, align 4
  %20 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = add nsw i32 6382384, %21
  %23 = call i32 @nvkm_rd32(%struct.nvkm_device* %20, i32 %22)
  %24 = and i32 %23, 65535
  %25 = load i32*, i32** %6, align 8
  store i32 %24, i32* %25, align 4
  %26 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = add nsw i32 6382388, %27
  %29 = call i32 @nvkm_rd32(%struct.nvkm_device* %26, i32 %28)
  %30 = and i32 %29, 65535
  %31 = load i32*, i32** %5, align 8
  store i32 %30, i32* %31, align 4
  ret void
}

declare dso_local i32 @nvkm_rd32(%struct.nvkm_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
